[package]
name = "yara-mapper-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Nils Homer <nils@fulcrumgenomics.com>"]
description = "Low-level FFI bindings to the YARA read mapper (SeqAn2)"
repository.workspace = true
homepage = "https://github.com/fulcrumgenomics/rust-yara"
documentation = "https://docs.rs/yara-mapper-sys"
readme = "../README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["bioinformatics", "yara", "seqan", "alignment", "ngs"]
license.workspace = true
include = [
    "src/",
    "build.rs",
    "cpp/",
    "LICENSE",
    "README.md",
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
yara-seqan2-sys = { version = "0.1.0", path = "../yara-seqan2-sys" }

[build-dependencies]
cc = "1"
